fix: [CDS-39114]: fixed text overflow on manifests and artifact list view (#9847)

--- a/src/modules/70-pipeline/components/ArtifactsSelection/ArtifactsSelection.module.scss
+++ b/src/modules/70-pipeline/components/ArtifactsSelection/ArtifactsSelection.module.scss
@@ -20,10 +20,6 @@
     color: var(--primary-7) !important;
   }
 
-  .locationField {
-    display: flex;
-    align-items: center;
-  }
   .connectorNameField {
     display: flex;
     align-items: center;
